Add new words in `settings.json`

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
   "cSpell.words": [
     "Aliexpress",
+    "Bellota",
+    "btns",
     "Finanlitcy",
     "informburo",
+    "nactive",
     "Poors",
     "Standard&Poors",
     "ВЦИОМ",
