`main.html` has been translated into English

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,12 +3,17 @@
     "Abay",
     "Aliexpress",
     "Bellota",
+    "Botagoz",
     "btns",
     "Finanlitcy",
     "informburo",
+    "Kazpost",
     "nactive",
+    "NAFI",
     "Poors",
+    "Rospotrebnadzor",
     "Standard&Poors",
+    "Zhumanova",
     "ВЦИОМ",
     "Казпочта",
     "Минобрнауки",
